[gd_scene load_steps=34 format=3 uid="uid://gf5wlaeba2kd"]

[ext_resource type="Script" uid="uid://bw5t8yn0mlvar" path="res://Mario.gd" id="1_j4q2k"]
[ext_resource type="Texture2D" uid="uid://nf6ai2bg50ju" path="res://marioSmall.png" id="2_p65m7"]
[ext_resource type="Texture2D" uid="uid://blw3jphe3wpu7" path="res://GroundPound.png" id="3_s5y7r"]
[ext_resource type="Texture2D" uid="uid://bb4xgua3nrnic" path="res://MarioTwirl.png" id="4_uxv71"]
[ext_resource type="AudioStream" uid="uid://wq66xgbhtjul" path="res://Sounds/Mario Jump.wav" id="4_vs6bi"]
[ext_resource type="AudioStream" uid="uid://dbcahyqgwgy43" path="res://Sounds/Kick.wav" id="5_oyqij"]
[ext_resource type="AudioStream" uid="uid://v45340573vb" path="res://Sounds/Squish.wav" id="6_eo264"]
[ext_resource type="AudioStream" uid="uid://cl6axvjktcj0q" path="res://Sounds/Thwomp.wav" id="7_wroks"]
[ext_resource type="AudioStream" uid="uid://d0voxryawvf1j" path="res://Sounds/Tail.wav" id="9_4fgbt"]
[ext_resource type="AudioStream" uid="uid://bd17xd6b2yxrg" path="res://Sounds/Skid.wav" id="10_3x6i1"]
[ext_resource type="AudioStream" uid="uid://djj8c66fqm1nt" path="res://Sounds/Death.wav" id="11_xtg3g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5pehq"]
atlas = ExtResource("2_p65m7")
region = Rect2(271, 1, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_udlea"]
atlas = ExtResource("2_p65m7")
region = Rect2(289, 1, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3f0l5"]
atlas = ExtResource("2_p65m7")
region = Rect2(307, 1, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6h4gq"]
atlas = ExtResource("2_p65m7")
region = Rect2(325, 0, 16, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6vwh"]
atlas = ExtResource("2_p65m7")
region = Rect2(307, 1, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nucgg"]
atlas = ExtResource("3_s5y7r")
region = Rect2(1, 1, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tpdt"]
atlas = ExtResource("3_s5y7r")
region = Rect2(19, 1, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xocc"]
atlas = ExtResource("3_s5y7r")
region = Rect2(37, 1, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4w0s2"]
atlas = ExtResource("3_s5y7r")
region = Rect2(55, 1, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_316rf"]
atlas = ExtResource("2_p65m7")
region = Rect2(199, 1, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_te5ym"]
atlas = ExtResource("4_uxv71")
region = Rect2(1, 1, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_by7e6"]
atlas = ExtResource("4_uxv71")
region = Rect2(19, 1, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqrb4"]
atlas = ExtResource("4_uxv71")
region = Rect2(37, 1, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0qed"]
atlas = ExtResource("4_uxv71")
region = Rect2(55, 1, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mb0j"]
atlas = ExtResource("2_p65m7")
region = Rect2(271, 1, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ov6ms"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pehq")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_udlea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3f0l5")
}],
"loop": true,
"name": &"Walk",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6h4gq")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6vwh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nucgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tpdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xocc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4w0s2")
}],
"loop": false,
"name": &"groundPound",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_316rf")
}],
"loop": true,
"name": &"slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_te5ym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_by7e6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqrb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0qed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mb0j")
}],
"loop": false,
"name": &"twirl",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6h4gq"]
size = Vector2(24, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5snaj"]
size = Vector2(12, 15)

[sub_resource type="Animation" id="Animation_xtg3g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:deathFall")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_6h4gq"]
resource_name = "death"
length = 5.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"jump"
}, {
"args": [],
"method": &"restart"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:deathFall")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "audio"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sounds/death")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("11_xtg3g")
}],
"times": PackedFloat32Array(0)
}
tracks/4/use_blend = true

[sub_resource type="Animation" id="Animation_xqsmm"]
resource_name = "deathFall"
length = 5.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"restart"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath(".:deathFall")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "audio"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sounds/death")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("11_xtg3g")
}],
"times": PackedFloat32Array(0)
}
tracks/4/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xqsmm"]
_data = {
&"RESET": SubResource("Animation_xtg3g"),
&"death": SubResource("Animation_6h4gq"),
&"deathFall": SubResource("Animation_xqsmm")
}

[node name="Mario" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_j4q2k")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_ov6ms")
autoplay = "Walk"

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="Shape" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_6h4gq")
debug_color = Color(0.7, 0, 0, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_5snaj")

[node name="GroundPoundTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="GroundPoundCooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="TwirlCooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="TwirlGPCooldown" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="Coyote" type="Timer" parent="."]
wait_time = 0.06
one_shot = true

[node name="Sounds" type="Node" parent="."]

[node name="Jump" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("4_vs6bi")
volume_db = -14.52

[node name="death" type="AudioStreamPlayer" parent="Sounds"]
volume_db = -14.52

[node name="kick" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("5_oyqij")
volume_db = -14.52

[node name="spin" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("6_eo264")
volume_db = -14.52

[node name="pound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("7_wroks")
volume_db = -16.92

[node name="twirl" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("9_4fgbt")
volume_db = -16.92

[node name="slide" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("10_3x6i1")
volume_db = -16.92

[node name="AP_anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xqsmm")
}

[connection signal="area_entered" from="Hurtbox" to="." method="hurt"]
